# fastapi-crud-mongo

./: .gitignore  .python-version  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: action.yml
app/: main.py
app/server/databases/: database.py
app/server/models/: model.py
app/server/routes/: route.py
