[tool.poetry]
name = "fastapi-crud-mongo"
version = "0.1.0"
description = ""
authors = ["Yao Aziamoe <yao.aziamoe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
pymongo = "^4.6.1"
pydantic = {version = "^2.5.2", extras = ["email"]}
email-validator = "^2.1.0.post1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
