[tool.poetry]
name = "fastapi-crud-mongo"
version = "0.1.0"
description = ""
authors = ["Yao Aziamoe <yao.aziamoe@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "0.105.0"
uvicorn = "0.25.0"
motor = "3.3.2"
pymongo = "4.6.1"
pydantic = {version = "2.5.3", extras = ["email"]}

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"
black = "23.12.0"
pytest-cov = "4.1.0"
hypothesis = "6.92.1"

[tool.poetry.group.lint.dependencies]
isort = "5.13.2"
flake8 = "6.1.0"
mypy = "1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
